updates in html file

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>hall this medo </h1>
+    <h1>this an update </h1>
 
     <script src="app.js"></script>
 </body>
